--- a/src/HackermanLudoApi/appsettings.json
+++ b/src/HackermanLudoApi/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "FiaDB": "Server=tcp:krypt0r.database.windows.net,1433;Initial Catalog=FiaDB;Persist Security Info=False;User ID=Victor;Password=*WlJe3wp7!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
