--- a/src/TestOfEngine/TestOfEngine.csproj
+++ b/src/TestOfEngine/TestOfEngine.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GameEngine\GameEngine.csproj" />
+    <ProjectReference Include="..\HackermanLudoApi\HackermanLudoApi.csproj" />
   </ItemGroup>
 
 </Project>
